--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  animated_text_kit: ^4.2.1
+  cloud_firestore: ^1.0.0 # new
+  firebase_auth: ^1.0.0   # new
+  google_fonts: ^2.0.0
+  provider: ^5.0.0        # new
 
 dev_dependencies:
   flutter_test:
